--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
           <li>
             <img
-              src="./images/img1.jpg"
+              src="./images/team/mark-guerrero.jpg"
               alt="Mark Guerrero Product Designer"
               width="264"
               height="260"
@@ -75,7 +75,7 @@
           </li>
           <li>
             <img
-              src="./images/img2.jpg"
+              src="./images/team/tom-ford.jpg"
               alt="Tom Ford Frontend Developer"
               width="264"
               height="260"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="./images/img3.jpg"
+              src="./images/team/camila-garcia.jpg"
               alt="Camila Garcia Marketing"
               width="264"
               height="260"
@@ -95,13 +95,78 @@
           </li>
           <li>
             <img
-              src="./images/img4.jpg"
+              src="./images/team/daniel-wilson.jpg"
               alt="Daniel Wilson UI Designer"
               width="264"
               height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/banking-app.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/meditation-app.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/taxi-service.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/screen-illsutrations.jpg"
+              alt="Screen Ilustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Ilustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
