--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          >Web<span class="header-logo-span">Studio</span></a
+        >
         <ul>
           <li><a class="nav-link" href="#">Studio</a></li>
           <li><a class="nav-link" href="#">Portfolio</a></li>
@@ -42,12 +44,12 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="order-section">
         <h1>Effective Solutions for Your Business</h1>
         <button class="section-button" type="button">Order Service</button>
       </section>
       <section>
-        <h2>Headline</h2>
+        <h2 hidden>About Us</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -79,10 +81,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team-section">
         <h2>Our Team</h2>
         <ul>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/team/mark-guerrero.jpg"
               alt="Mark Guerrero Product Designer"
@@ -92,7 +94,7 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/team/tom-ford.jpg"
               alt="Tom Ford Frontend Developer"
@@ -102,7 +104,7 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/team/camila-garcia.jpg"
               alt="Camila Garcia Marketing"
@@ -112,7 +114,7 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/team/daniel-wilson.jpg"
               alt="Daniel Wilson UI Designer"
@@ -191,7 +193,9 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"
+        >Web<span class="footer-logo-span">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
