--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
           >Web<span class="header-logo-span">Studio</span></a
         >
         <ul>
-          <li><a class="nav-link" href="#">Studio</a></li>
-          <li><a class="nav-link" href="#">Portfolio</a></li>
-          <li><a class="nav-link" href="#">Contacts</a></li>
+          <li><a class="nav-link" href="./index.html">Studio</a></li>
+          <li><a class="nav-link" href="">Portfolio</a></li>
+          <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts-list">
         <ul>
           <li>
             <a class="address-link" href="mailto:info@devstudio.com"
@@ -45,36 +45,36 @@
     </header>
     <main>
       <section class="order-section">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="main-headline">Effective Solutions for Your Business</h1>
         <button class="section-button" type="button">Order Service</button>
       </section>
       <section>
-        <h2 hidden>About Us</h2>
+        <h2 class="section-headline" hidden>About Us</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
-            <p>
+            <p class="list-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
-            <p>
+            <p class="list-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
-            <p>
+            <p class="list-paragraph">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3>Technologies</h3>
-            <p>
+            <p class="list-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -82,7 +82,7 @@
         </ul>
       </section>
       <section class="team-section">
-        <h2>Our Team</h2>
+        <h2 class="section-headline">Our Team</h2>
         <ul>
           <li class="team-list-item">
             <img
@@ -91,8 +91,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-list-headline">Mark Guerrero</h3>
+            <p class="list-paragraph">Product Designer</p>
           </li>
           <li class="team-list-item">
             <img
@@ -101,8 +101,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-list-headline">Tom Ford</h3>
+            <p class="list-paragraph">Frontend Developer</p>
           </li>
           <li class="team-list-item">
             <img
@@ -111,8 +111,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-list-headline">Camila Garcia</h3>
+            <p class="list-paragraph">Marketing</p>
           </li>
           <li class="team-list-item">
             <img
@@ -121,13 +121,13 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-list-headline">Daniel Wilson</h3>
+            <p class="list-paragraph">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="section-list-headline">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -136,8 +136,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="section-list-headline">Banking App</h3>
+            <p class="list-paragraph">App</p>
           </li>
           <li>
             <img
@@ -146,8 +146,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="section-list-headline">Cashless Payment</h3>
+            <p class="list-paragraph">Marketing</p>
           </li>
           <li>
             <img
@@ -156,8 +156,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="section-list-headline">Meditation App</h3>
+            <p class="list-paragraph">App</p>
           </li>
           <li>
             <img
@@ -166,18 +166,18 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="section-list-headline">Taxi Service</h3>
+            <p class="list-paragraph">Marketing</p>
           </li>
           <li>
             <img
               src="./images/portfolio/screen-illsutrations.jpg"
-              alt="Screen Ilustrations"
+              alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h3>Screen Ilustrations</h3>
-            <p>Design</p>
+            <h3 class="section-list-headline">Screen Illustrations</h3>
+            <p class="list-paragraph">Design</p>
           </li>
           <li>
             <img
@@ -186,17 +186,17 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="section-list-headline">Online Courses</h3>
+            <p class="list-paragraph">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="logo" href="./index.html"
         >Web<span class="footer-logo-span">Studio</span></a
       >
-      <p>
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
