--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
         <h2 class="section-headline" hidden>About Us</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="section-list-headline">Strategy</h3>
             <p class="list-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="section-list-headline">Punctuality</h3>
             <p class="list-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="section-list-headline">Diligence</h3>
             <p class="list-paragraph">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="section-list-headline">Technologies</h3>
             <p class="list-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -127,7 +127,7 @@
         </ul>
       </section>
       <section>
-        <h2 class="section-list-headline">Our Portfolio</h2>
+        <h2 class="section-headline">Our Portfolio</h2>
         <ul>
           <li>
             <img
